@@ -2,6 +2,9 @@ See ChangeLog for more.
 
 * 1.3.7
 
+New word string-cmp which returns -1, 0, 1 according to s1 is less than,
+equal to, or greater than s2.
+
 Marcros renamed (old names can still be used):
 FTH_DOCUMENTATION_SYMBOL --> FTH_SYMBOL_DOCUMENTATION
 FTH_LAST_MESSAGE_SYMBOL	--> FTH_SYMBOL_LAST_MESSAGE
